# rusted_ocpp_server

./: .env  Cargo.toml  LICENSE  README.md  cert.pem  key.pem  settings.env  settings.yaml  sqlite3.lib
migrations/2021-04-24-171138_ocpp_database/: down.sql  up.sql
src/: charger_client.rs  client.rs  config.rs  database.rs  error.rs  errors.rs  json_rpc.rs  logs.rs  main.rs  messages.rs  models.rs  requests.rs  responses.rs  schema.rs  server.rs  user.rs  webclient.rs  ws_basic_auth.rs
src/messages/: mod.rs  requests.rs  responses.rs
static/: forms.html  index-old.html  index.html  package-lock.json
web-client/: README.md  package-lock.json  package.json
web-client/src/assets/json-schema/: oneOf.json
webclient/: asset-manifest.json  index-old.html  index.html
webclient/static/js/: 2.1e7d80ac.chunk.js  2.26f64b6a.chunk.js  2.6b32f307.chunk.js  2.850d0aae.chunk.js  2.850d0aae.chunk.js.map  2.ffe420c2.chunk.js  2.ffe420c2.chunk.js.LICENSE.txt  3.366362e0.chunk.js  3.366362e0.chunk.js.map  3.3f19d51c.chunk.js  3.3f19d51c.chunk.js.map  3.49fc4e36.chunk.js  3.49fc4e36.chunk.js.map  3.6c1c4715.chunk.js.map  3.fe1c9854.chunk.js  3.fe1c9854.chunk.js.map  main.30d79f22.chunk.js  main.30d79f22.chunk.js.map  main.428eff70.chunk.js  main.428eff70.chunk.js.map  main.42924a93.chunk.js  main.42924a93.chunk.js.map  main.5fff151e.chunk.js  main.5fff151e.chunk.js.map  main.70d5f53c.chunk.js  main.70d5f53c.chunk.js.map  main.70ede434.chunk.js  main.70ede434.chunk.js.map  main.85e653a9.chunk.js  main.85e653a9.chunk.js.map  main.8c9775d5.chunk.js  main.8c9775d5.chunk.js.map  main.8d5b53ae.chunk.js  main.8d5b53ae.chunk.js.map  main.91c8fe2b.chunk.js  main.91c8fe2b.chunk.js.map  main.a0f90136.chunk.js  main.a0f90136.chunk.js.map  main.b2a47287.chunk.js  main.b2a47287.chunk.js.map  (+18 more)
