[package]
authors = ["marcin <marcin.wionczyk@gmail.com>"]
edition = "2018"
name = "rusted_ocpp_server"
version = "0.1.0"
[dependencies]
actix = "0.10.0"
actix-files = "0.5.0"
actix-web-actors = "3.0.0"
awmp = "0.6.0"
chrono = "*"
config = "0.11.0"
dotenv = "0.15.0"
env_logger = "*"
log = "0.4.14"
openssl = "0.10.33"
qstring = "0.7.2"
rustls = "0.18.1"
serde_json = "1.0.64"
uuid = "0.8.2"
validator = "0.13.0"
validator_derive = "0.13.0"
webpki-roots = "*"

[dependencies.actix-web]
features = ["rustls"]
version = "3.3.2"

[dependencies.serde]
features = ["derive"]
version = "1.0.125"
# version = "0.8.3"
# r2d2 = "0.8.9"
# serde = { version = "1.0.125", features=["derive"] }
# serde_json = "1.0.64"
# serde_qs = { version = "0.8.3", features=["actix"] }
# validator = "0.13.0"
# validator_derive = "0.13.0"
